--- a/BalabobaDiscordBot.csproj
+++ b/BalabobaDiscordBot.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01581" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01581" />
   </ItemGroup>
 
 </Project>
